image/text modified and debugging

--- a/app/index.html
+++ b/app/index.html
@@ -2,11 +2,14 @@
 <html class="no-js" lang="fr">
   <head>
     <meta charset="utf-8">
-    <title>callToAction</title>
-    <meta name="description" content="">
+    <title>Call to Action</title>
+    <meta name="description" content="Une escape room dans votre salon !">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="shortcut icon" href="/favicon.ico">
-    <link rel="apple-touch-icon" href="/apple-touch-icon.png">
+    <link rel="apple-touch-icon" href="images/touchicon.png">
+    <link rel="icon" href="images/favicon.png">
+    <!-- set /favicon.ico for IE10 win -->
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="images/tileicon.png">
     <script src="https://use.typekit.net/qpd1img.js"></script>
     <script>try{Typekit.load({ async: true });}catch(e){}</script>
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
@@ -31,25 +34,26 @@
 
     <header class="header">
       <div class="section header-content">
-        <div class="header-logo"><h1>Call to action</h1></div>
+        <div class="header-logo"><h1>Call to Action</h1></div>
       </div>
     </header>
 
     <section class="content">
       <div class="section section-margin-large container-row wrapper-content">
-        <div class=" block content-title">
-          <h2>Une escape<br>room</h2>
+        <div class="block content-title">
+          <h2>Une escape<br> room</h2>
           <h2>Dans votre<br> salon</h2>
         </div>
         <div class="block content-descript">
-          <p class="descript-text"><span>Call To Action</span> utilise les possibilités interactives du mobile et du web pour transporter les joueurs dans des univers riches en challenges et pleins de  suspense.</p>
-          <p class="descript-text">Plus qu’un jeu classique, CTA incite le joueur à effectuer des actions dans l’espace réel à l’aide de son mobile, rassembler des objets pour se défendre contre une horde de zombies ou chercher un coffre caché derrière un mur !</p>
+          <p class="descript-text"><strong>Call to Action</strong> (CTA) utilise les possibilités interactives du mobile et du web pour vous transporter dans des univers riches en challenges et pleins de suspense.</p>
+          <p class="descript-text">CTA est en cours de développement. Des premiers test seront organisés dans les prochains mois. Inscrivez-vous ci-dessous pour faire partie des premiers testeurs !
+          </p>
           <div class="container-row content-icon">
             <div class="container-row block-icon">
               <img src="images/icon-collab.png" alt="collab" title="CTA, jeux de collaboration" />
               <div class="icon-text">
                 <h3>Un jeu à plusieurs</h3>
-                <p>Jouez entre amis et tenter de résoudre un nouveau genre de challenges inédits.</p>
+                <p>Jouez entre amis et tentez de résoudre des défis d'un nouveau genre.</p>
               </div>
             </div>
             <div class="container-row block-icon">
@@ -65,7 +69,7 @@
 
     <section class="call-to-action">
       <div class="section section-margin-medium container-column call-to-action-content">
-        <h2>Pour devenir Beta Testeur ou obtenir des nouvelles du projet</h2>
+        <h2>Pour devenir beta-testeur ou recevoir des nouvelles du projet</h2>
         <div >
           <!-- Begin MailChimp Signup Form -->
           <div id="mc_embed_signup">
@@ -95,10 +99,10 @@
     <footer class="footer">
       <div class="section section-margin-small container-column footer-content">
         <img src="images/logocta.png" alt="Logo CTA" title="Logo call to action game" />
-        <p>Call To Action a été imaginé en sept jours par Clément Deschamps, Yannis Smesny, Adrien Nicod et la team Etamin dans le cadre d’un hackathon organisé par Etamin Studio</p>
+        <p>Call to Action a été imaginé en sept jours par Clément Deschamps, Yannis Smesny, Adrien Nicod et la team Etamin dans le cadre d’un hackathon organisé par Etamin Studio</p>
         <div class="container-row footer-link">
-          <a href="http://hackathon.etaminstud.io/"><img src="images/logo-hacketamin.png" alt="HackETAMIN" title="HackEtamin"></a>
-          <a href="http://etaminstudio.com/"><img src="images/logo-etamin.png" alt="Etamin studio" title="agence Etamin Studio"></a>
+          <a href="http://hackathon.etaminstud.io"><img src="images/logo-hacketamin.png" alt="HackEtamin" /></a>
+          <a href="http://etaminstudio.com"><img src="images/logo-etamin.png" alt="Etamin Studio" /></a>
         </div>
       </div>
       <div class="footer-bar"></div>
