--- a/app/index.html
+++ b/app/index.html
@@ -57,7 +57,7 @@
         </div>
         <div class="block content-descript">
           <p class="descript-text"><strong>Call to Action</strong> (CTA) utilise les possibilités interactives du mobile et du web pour vous transporter dans des univers riches en challenges et pleins de suspense.</p>
-          <p class="descript-text">CTA est en cours de développement. Des premiers test seront organisés dans les prochains mois. Inscrivez-vous ci-dessous pour faire partie des premiers testeurs !
+          <p class="descript-text">CTA est en cours de développement. Des tests grandeur nature seront organisés dans les prochains mois. Inscrivez-vous ci-dessous pour faire partie des premiers testeurs !
           </p>
           <div class="container-row content-icon">
             <div class="container-row block-icon">
