add opengraph, debugging safari

--- a/app/index.html
+++ b/app/index.html
@@ -1,8 +1,14 @@
 <!doctype html>
-<html class="no-js" lang="fr">
+<html class="no-js" lang="fr" prefix="og: http://ogp.me/ns#">
   <head>
     <meta charset="utf-8">
     <title>Call to Action</title>
+    
+    <meta property="og:title" content="Call to Action" />
+    <meta property="og:type" content="game.mobile" />
+    <meta property="og:url" content="http://calltoactiongame.com/" />
+    <meta property="og:image" content="images/calltoaction.png" />
+
     <meta name="description" content="Une escape room dans votre salon !">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="apple-touch-icon" href="images/touchicon.png">
@@ -81,11 +87,11 @@
     <section class="call-to-action">
       <div class="section section-margin-medium container-column call-to-action-content">
         <h2>Pour devenir beta-testeur ou recevoir des nouvelles du projet</h2>
-        <div >
+        <div class ="call-to-action-button">
           <!-- Begin MailChimp Signup Form -->
           <div id="mc_embed_signup">
             <form action="//etaminstudio.us2.list-manage.com/subscribe/post?u=533ef687af42a84c8d815b363&amp;id=a8d68e30be" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-              <div id="mc_embed_signup_scroll" class ="container-row call-to-action-button">
+              <div id="mc_embed_signup_scroll" class ="container-row container-call-to-action">
                 <div class="mc-field-group">
                     <input type="email" value="" name="EMAIL" placeholder="Entrez votre mail" class="required email" id="mce-EMAIL" />
                 </div>
