--- a/app/index.html
+++ b/app/index.html
@@ -3,12 +3,10 @@
   <head>
     <meta charset="utf-8">
     <title>Call to Action</title>
-    
     <meta property="og:title" content="Call to Action" />
-    <meta property="og:type" content="game.mobile" />
+    <meta property="og:type" content="game" />
     <meta property="og:url" content="http://calltoactiongame.com/" />
-    <meta property="og:image" content="images/calltoaction.png" />
-
+    <meta property="og:image" content="http://calltoactiongame.com/images/calltoaction.png" />
     <meta name="description" content="Une escape room dans votre salon !">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="apple-touch-icon" href="images/touchicon.png">
