Refactoring for harp & netlify

--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,8 @@
     <title>Call to Action</title>
     <meta property="og:title" content="Call to Action" />
     <meta property="og:type" content="game" />
-    <meta property="og:url" content="http://calltoactiongame.com/" />
-    <meta property="og:image" content="http://calltoactiongame.com/images/calltoaction.png" />
+    <meta property="og:url" content="https://www.calltoactiongame.com/" />
+    <meta property="og:image" content="https://www.calltoactiongame.com/images/calltoaction.png" />
     <meta name="description" content="Une escape room dans votre salon !">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="apple-touch-icon" href="images/touchicon.png">
@@ -16,19 +16,8 @@
     <meta name="msapplication-TileImage" content="images/tileicon.png">
     <script src="https://use.typekit.net/qpd1img.js"></script>
     <script>try{Typekit.load({ async: true });}catch(e){}</script>
-    <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
-    <!-- build:css(.) styles/vendor.css -->
-    <!-- bower:css -->
-    <!-- endbower -->
-    <!-- endbuild -->
-    <!-- build:css(.tmp) styles/main.css -->
     <link rel="stylesheet" href="styles/main.css">
-    <!-- endbuild -->
-    <!-- build:js scripts/vendor/modernizr.js -->
-    <script src="/bower_components/modernizr/modernizr.js"></script>
-
-    <!-- endbuild -->
 
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -117,33 +106,10 @@
         <p>Call to Action a été imaginé en sept jours par Clément Deschamps, Yannis Smesny, Adrien Nicod et la team Etamin dans le cadre d’un hackathon organisé par Etamin Studio</p>
         <div class="container-row footer-link">
           <a href="http://hackathon.etaminstud.io"><img src="images/logo-hacketamin.png" alt="HackEtamin" /></a>
-          <a href="http://etaminstudio.com"><img src="images/logo-etamin.png" alt="Etamin Studio" /></a>
+          <a href="https://www.etaminstudio.com"><img src="images/logo-etamin.png" alt="Etamin Studio" /></a>
         </div>
       </div>
       <div class="footer-bar"></div>
     </footer>
-
-
-    <!-- build:js(.) scripts/vendor.js -->
-    <!-- bower:js -->
-    <script src="/bower_components/jquery/dist/jquery.js"></script>
-    <!-- endbower -->
-    <!-- endbuild -->
-
-
-
-    <!-- build:js scripts/main.js -->
-    <script src="scripts/main.js"></script>
-    <!-- endbuild -->
-
-    <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
-    <script>
-      (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
-      function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
-      e=o.createElement(i);r=o.getElementsByTagName(i)[0];
-      e.src='https://www.google-analytics.com/analytics.js';
-      r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-      ga('create','UA-XXXXX-X');ga('send','pageview');
-    </script>
   </body>
 </html>
